--- a/Parlor/EditClient.storyboard
+++ b/Parlor/EditClient.storyboard
@@ -64,7 +64,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="XC5-g8-EtS"/>
                                             </constraints>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no"/>
                                         </textField>
@@ -87,7 +87,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="F4A-nR-gJk"/>
                                             </constraints>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="phonePad"/>
                                             <connections>
@@ -113,7 +113,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="PyX-ke-pxf"/>
                                             </constraints>
-                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="textColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                             <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
                                         </textField>
